js/js.translator/testData/incremental/invalidation/companionPropertiesWithCrossModuleInliner/lib2/l2pair.3.kt
inline fun testPairProperty(): Int {
    return MyClass.pairProperty.first + MyClass.pairProperty.second
}
